--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>
-            <a href="https://github.com/EastDeveloper/polishpubs.github.io"></a>
+            <a href="https://eastdeveloper.github.io/polishpubs.github.io/"></a>
         </h1>
             </h1>
         <p>
