--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>It's a amazing time g.</h1>
         <h1>
             <a href="https://eastdeveloper.github.io/polishpubs.github.io/"></a>
         </h1>
