--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ hr {
 <li><a href="https://twitter.com/phantomarcade3k">PhantomArcade3K</a> and <a href="https://twitter.com/evilsk8r">Evilsk8r</a> - Art</li>
 <li><a href="https://twitter.com/kawaisprite">Kawai Sprite</a> - Music</li>
 </ul>
-<p>This game was made with love to Newgrounds and its community. Extra love to Tom Fulp.</p>
+<p>This game was made with love to Newgrounds ands its community. Extra love to Tom Fulp.</p>
 <h3 id="kade-engine-1">Kade Engine</h3>
 <ul>
 <li><a href="https://twitter.com/KadeDeveloper">KadeDeveloper</a> - Maintainer and lead programmer</li>
