--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
     <body>
         <div class="content">
-            <img src="construction.webp""
+            <img src="construction.webp"
+            <marquee
     </body>
