--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="content">
             <img src="construction.webp" />
-            <h1>The Best Dog In The World Page!!!</h1>
+            <h1>The Best Dog In The World Pages!!!</h1>
             <marquee>Come back for new pics daily!!!</marquee>
             <div class="pics">
                 <img src="https://mydogchase.com/public/chase/IMG_20191228_222206.jpg" />
