--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
         <div class="content">
             <img src="construction.webp" />
 
-<header>During this time in 1999.. had a old amount of great moments..</header>
+<header>During this time in 1999s.. had a old amount of great moments..</header>
