--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
         <div class="content">
             <img src="construction.webp" />
 
-<header>During this time in 1999s.. had a old amount of great moments..</header>
+<header>This site is under construction for temporarily amount of time, until our site can get published, until then please join the discord server for more information.</header>
