--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
         <div class="content">
             <img src="construction.webp" />
 
-<header>This site is under construction for temporarily amount of time, until our site can get published, until then please join the discord server for more information.</header>
+<h1>This site is under construction for temporarily amount of time, until our site can get published, until then please join the discord server for more information.</h1>
