--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="/main.css" rel="stylesheet" />
+        <link rel="stylesheet" href="styles.css">
+
     </head>
     <body>
         <div class="content">
