--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
         <div class="content">
             <img src="construction.webp" />
 
+        <div>https://discord.gg/VwMdEmn99M</div>
+
 <h1>This site is under construction for temporarily amount of time, until our site can get published, until then please join the discord server for more information.</h1>
