--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
 
         <div>https://discord.gg/VwMdEmn99M</div>
 
+        <img src="200w.gif"
+
 <h1>This site is under construction for temporarily amount of time, until our site can get published, until then please join the discord server for more information.</h1>
