--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <div>https://discord.gg/VwMdEmn99M</div>
 
-        <img src="200w.gif"
+        <img src='200w.gif' alt="Image" height="42" width="42">.
+
 
 <h1>This site is under construction for temporarily amount of time, until our site can get published, until then please join the discord server for more information.</h1>
