--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="styles.css">
 
-    </head>
-    <body>
-        <div class="content">
-            <img src="construction.webp" />
+<head>
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+    <div class="content">
+        <img src="construction.webp" />
 
         <div>https://discord.gg/VwMdEmn99M</div>
 
         <img src='200w.gif' alt="Image" height="42" width="42">.
 
 
-<h1>This site is under construction for temporarily amount of time, until our site can get published, until then please join the discord server for more information.</h1>
+        <h1>This site is under construction for temporarily amount of time, until our site can get published, until then
+            please join the discord server for more information.</h1>
+    </div>
+</body>
+
+</html>
