--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             until our site can get published, until then
             
             please join the discord server for more information.</h1>
-            <div class="container" id>
+            <div class="container" id="main">
                 <label class="title">Default</label>
                 <p>Kick! Punch! It's all in the mind.</p>
               </div>
