--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <label class="title">Default</label>
+        <label class="title">documentationmain</label>
         <p>Website under Development, please take your time to look at our documentation page! :).</p>
     </div>
 
