--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="container">
-        <label class="title">documentationmain</label>
-        <p>Website under Development, please take your time to look at our documentation page! :).</p>
+        <label class="title">documentation</label>
+        <p>Website under Development, please take your time to look at our documentation page.</p>
     </div>
 
 
