--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polish Pubs</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/micah5/PSone.css@master/PSone.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -16,17 +16,24 @@
     </div>
 
 
-<body>
-    <main>
-    <img src="construction.webp" />
-    <div>https://discord.gg/VwMdEmn99M</div>
-    <img src='200w.gif' alt="Image" height="42" width="42">.
-    <h1>This site is under construction for temporarily amount of time,
+    <body>
+        <main>
+            <img src="construction.webp" />
+            <div>https://discord.gg/VwMdEmn99M</div>
+            <img src='200w.gif' alt="Image" height="42" width="42">.
+            <h1>Documentation will not be provided unless you joined the discord server.</h1>
+            <h2>Test</h2>
+            <h3>h3</h3>
+        </main>
+    </body>
 
-        until our site can get published, until then
+    <div class="footer">
+        <p>This is a temp footer.</p>
 
-        please join the discord server for more information.</h1>
-    </main>
-</body>
+    </div>
+
+    <body>
+
+    </body>
 
 </html>
